# bundle-adjustment-compare

./: .gitignore  CMakeLists.txt  replicate  replicate.ps1  requirements.txt  setup  setup.bat  setup.ps1
output/: ba_intrinsics_mono_left.json  ba_intrinsics_stereo_left.json  ba_robotcar_observations.txt  ba_robotcar_points.txt  ba_robotcar_poses.txt  benchmark_results.json  dl_ba.txt  dogleg_BA.txt  lm_BA.txt  lm_ba.txt
scripts/: ba_module.cpp  benchmark_ba.py  create_video.py  dump_intrinsics.py  make_ba_dataset.py  make_ba_dataset_orb_stereo.py  make_pointcloud.py  project_points_on_frames.py  visualize_ba.py  visualize_robotcar_map.py  visualize_robotcar_map_enhanced.py
